<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.kalaha.menu.MenuViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".menu.MenuFragment">

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/multiplay_button"
            />

        <Button
            android:id="@+id/singleplay_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/singleplaer_game"
            android:onClick="@{() -> viewModel.onSingleClicked()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/multiplay_button"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintBottom_toTopOf="@id/options_button"/>

        <Button
            android:id="@+id/multiplay_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplayer_game"
            android:onClick="@{() -> viewModel.onMultiClicked()}"
            app:layout_constraintStart_toEndOf="@id/singleplay_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/singleplay_button"
            app:layout_constraintBottom_toBottomOf="@id/singleplay_button"/>

        <Button
            android:id="@+id/options_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/options"
            android:onClick="@{() -> viewModel.onOptionsClicked()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/singleplay_button"
            app:layout_constraintBottom_toTopOf="@id/statistics_button"
            />
        <Button
            android:id="@+id/statistics_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics"
            android:onClick="@{() -> viewModel.onStatisticsClicked()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/options_button"
            app:layout_constraintBottom_toBottomOf="parent"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>